--- a/Dll/HideConsoleOnClose.vcxproj.filters
+++ b/Dll/HideConsoleOnClose.vcxproj.filters
@@ -1,3 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="14.0"/>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="14.0">
+  <ItemGroup>
+    <ClCompile Include="api.c" />
+    <ClCompile Include="dll.c" />
+    <ClCompile Include="hooks.c" />
+    <ClCompile Include="wow64.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="resource.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="dll.def" />
+  </ItemGroup>
+</Project>
