--- a/Dll/HideConsoleOnClose.vcxproj
+++ b/Dll/HideConsoleOnClose.vcxproj
@@ -33,41 +33,37 @@
   <ItemGroup>
     <None Include="dll.def" />
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.vcxproj">
+      <Project>{39321a31-1e8e-4d59-a55a-d0ebaefd4a71}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{9375C300-3AE2-4E66-84E5-EF36F5281691}</ProjectGuid>
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <ProjectName>HideConsoleOnClose</ProjectName>
   </PropertyGroup>
-
   <PropertyGroup Condition=" $(Platform) == 'x64' ">
     <TargetName>$(ProjectName)64</TargetName>
   </PropertyGroup>
-
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <Import Project="..\HideConsoleOnClose.props" />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <Import Project="..\NoDefaultLibs.props" />
-
   <ItemDefinitionGroup>
     <ClCompile>
       <PreprocessorDefinitions>HIDE_CONSOLE_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>HideConsoleOnCloseShared.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>dll.def</ModuleDefinitionFile>
     </Link>
     <ResourceCompile>
       <PreprocessorDefinitions>HIDE_CONSOLE_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ResourceCompile>
   </ItemDefinitionGroup>
-
   <Target Name="Buildx64" BeforeTargets="ResourceCompile" Condition=" $(Platform) == 'Win32' ">
-    <Message Importance="high" Text="Building x64 DLL for inclusion as a resource in Win32 DLL." />
-    <MSBuild Projects="$(MSBuildProjectFile)" Properties="Platform=x64;PlatFormTarget=x64" RunEachTargetSeparately="true" />
-    <Message Importance="high" Text="Building Wow64Helper for inclusion as a resource in Win32 DLL." />
-    <MSBuild Projects="$(SolutionDir)Wow64Helper\Wow64Helper.vcxproj" Properties="Platform=x64;PlatFormTarget=x64" RunEachTargetSeparately="true" />
+    <Message Importance="high" Text="Building x64 version for inclusion as a resource in Win32 DLL. $(SolutionPath)" />
+    <MSBuild Projects="$(SolutionPath)" Properties="Platform=x64;PlatFormTarget=x64" RunEachTargetSeparately="true" />
   </Target>
-
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
 </Project>
