--- a/Shared/Shared.vcxproj.filters
+++ b/Shared/Shared.vcxproj.filters
@@ -1,3 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="14.0"/>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="14.0">
+  <ItemGroup>
+    <ClCompile Include="hexstr.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="hexstr.h" />
+    <ClInclude Include="api.h" />
+    <ClInclude Include="stdafx.h" />
+  </ItemGroup>
+</Project>
