find owner thread hack

--- a/Dll/HideConsoleOnClose.vcxproj.filters
+++ b/Dll/HideConsoleOnClose.vcxproj.filters
@@ -5,6 +5,7 @@
     <ClCompile Include="dll.c" />
     <ClCompile Include="hooks.c" />
     <ClCompile Include="wow64.c" />
+    <ClCompile Include="conhost.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
