--- a/Dll/HideConsoleOnClose.vcxproj
+++ b/Dll/HideConsoleOnClose.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="api.c" />
+    <ClCompile Include="conhost.c" />
     <ClCompile Include="dll.c" />
     <ClCompile Include="hooks.c" />
     <ClCompile Include="wow64.c" />
@@ -63,7 +64,6 @@
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <Target Name="Buildx64" BeforeTargets="ResourceCompile" Condition=" $(Platform) == 'Win32' ">
-
     <Message Importance="high" Text="Building x64 version for inclusion as a resource in Win32 DLL." />
     <Exec Command="&quot;$(MSBuildBinPath)\msbuild.exe&quot; &quot;$(SolutionPath)&quot; /p:Platform=x64 &quot;/p:Configuration=$(Configuration)&quot; /v:m /nologo" />
   </Target>
