--- a/Dll/HideConsoleOnClose.vcxproj.filters
+++ b/Dll/HideConsoleOnClose.vcxproj.filters
@@ -9,6 +9,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="dll.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resource.rc" />
