wait on owner thread, too

--- a/Dll/HideConsoleOnClose.vcxproj
+++ b/Dll/HideConsoleOnClose.vcxproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dll.h" />
+    <ClInclude Include="hooks.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
